made the TASSEL image much smaller while still preserving its contents and functionality

--- a/tools/tassel/Dockerfile
+++ b/tools/tassel/Dockerfile
@@ -1,8 +1,8 @@
-FROM ubuntu:24.04@sha256:72297848456d5d37d1262630108ab308d3e9ec7ed1c3286a32fe09856619a782 AS build
+FROM ubuntu:24.04@sha256:72297848456d5d37d1262630108ab308d3e9ec7ed1c3286a32fe09856619a782 AS production
 
 WORKDIR /workspace/program/tassel
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-        openjdk-8-jdk
+        openjdk-8-jre-headless
 
-ADD https://bitbucket.org/tasseladmin/tassel-5-standalone.git#V5.2.95 ./tassel
+ADD https://bitbucket.org/tasseladmin/tassel-5-standalone.git#V5.2.95 ./production
