--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,6 @@ tools/plink/plink-resources
 tools/plink/*.txt
 tools/tassel/*.txt
 tools/gapit/gapit-resources
+tools/gcta/gcta-resources
+tools/gcta/*.txt
 
