Rewrote the build instructions to work on Alpine GNU/Linux to reduce image size down to 1.02 GiB from about 1.20 GiB, which was what the previous Ubuntu image's size was. The only minor issue remaining is figuring out why SPECTRA fails one of its build tests on Alpine GNU/Linux compared to how it does not fail any of its tests on Ubuntu GNU/Linux. This is a very minor detail, and GCTA still works perfectly fine on both platforms, but it does bother me a bit, nonetheless.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ tools/plink/plink-resources
 tools/plink/*.txt
 tools/tassel/*.txt
 tools/gapit/gapit-resources
+tools/gapit/*.txt
 tools/gcta/gcta-resources
 tools/gcta/*.txt
 tools/fastlmm/*.txt
