Reduced AMD64 GCTA image size to 287 MiB, a significant improvement over the emergency patch version. Thoroughly tested with real GWAS datasets and verified all functionality works correctly. No performance or reliability differences observed between this optimized version and the previous emergency patch - both successfully complete GWAS runs from start to finish.

--- a/tools/gcta/Dockerfile.amd64
+++ b/tools/gcta/Dockerfile.amd64
@@ -56,7 +56,11 @@ RUN mkdir -p gcta-shared-libs/apt-installed-libs gcta-shared-libs/intel-mkl-libs
         /lib/x86_64-linux-gnu/libgslcblas.so.0* \
         /lib/x86_64-linux-gnu/libgomp.so.1* \
         gcta-shared-libs/apt-installed-libs/ \
-        && cp -a /opt/intel/oneapi/mkl/2025.1/lib/intel64/* \
+        && cp -a /opt/intel/oneapi/mkl/2025.1/lib/intel64/libmkl_intel_lp64.so.2 \
+        /opt/intel/oneapi/mkl/2025.1/lib/intel64/libmkl_gnu_thread.so.2 \
+        /opt/intel/oneapi/mkl/2025.1/lib/intel64/libmkl_core.so.2 \
+        /opt/intel/oneapi/mkl/2025.1/lib/intel64/libmkl_avx2.so.2 \
+        /opt/intel/oneapi/mkl/2025.1/lib/intel64/libmkl_def.so.2 \
         gcta-shared-libs/intel-mkl-libs/ \
         && cp -a /usr/bin/gcta* gcta-executables/
 
