Fixed OpenBLAS OpenMP warnings in GCTA AARCH64 GWAS analysis. Built OpenBLAS with OpenMP to prevent potential hanging during compute-intensive operations. While AARCH64 GCTA functions correctly without this fix, it declutters output when running GWAS on real datasets.

--- a/tools/gcta/Dockerfile.aarch64
+++ b/tools/gcta/Dockerfile.aarch64
@@ -21,7 +21,7 @@ RUN apk update && apk add \
 ADD https://github.com/OpenMathLib/OpenBLAS.git#v0.3.15 ./dependencies/openblas
 
 RUN cd dependencies/openblas \
-        && make \
+        && make USE_OPENMP=1 \
         && make install PREFIX="/usr/include/openblas"
 
 ADD https://gitlab.com/libeigen/eigen.git#3.3.7 ./dependencies/eigen
